// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests articlesPreviews is zero 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Typography)
    align="center"
  >
    まだ記事が投稿されていません。
  </ForwardRef(Typography)>
</Fragment>
`;

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <CenterSpinner />
</Fragment>
`;

exports[`Shallow Snapshot Tests one page 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Stack)
      spacing={1}
    >
      <ForwardRef(Typography)
        align="center"
        component="div"
        fontSize={14}
      >
        1
        〜
        1
        件 / 全
        2
        件
      </ForwardRef(Typography)>
    </ForwardRef(Stack)>
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody)>
        <ForwardRef(TableRow)
          key="preview-1"
        >
          <ForwardRef(TableCell)>
            <ForwardRef(Box)
              minHeight={80}
            >
              <ForwardRef(Stack)
                justifyContent="center"
                minHeight={55}
              >
                <ForwardRef(Typography)
                  component="h3"
                  sx={
                    Object {
                      "wordBreak": "break-all",
                    }
                  }
                  variant="body1"
                >
                  ノーチラス号のエンジン
                </ForwardRef(Typography)>
              </ForwardRef(Stack)>
              <ForwardRef(Box)
                marginBottom={0}
              >
                <ForwardRef(Stack)
                  direction="row"
                  divider={
                    <ForwardRef(Divider)
                      flexItem={true}
                      orientation="vertical"
                    />
                  }
                  spacing={1}
                >
                  <NonStyleLink
                    to="/articles/1"
                  >
                    <ForwardRef(Button)
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      表示
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <NonStyleLink
                    to="/map/edit/1"
                  >
                    <ForwardRef(Button)
                      onClick={[MockFunction]}
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      編集
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <ForwardRef(Button)
                    disabled={false}
                    onClick={[Function]}
                    sx={
                      Object {
                        "minWidth": 0,
                        "p": 0,
                      }
                    }
                  >
                    削除
                  </ForwardRef(Button)>
                </ForwardRef(Stack)>
              </ForwardRef(Box)>
            </ForwardRef(Box)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={200}
          >
            <IconAndText
              align="left"
              fontSize={14}
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="隠れミッキー"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={70}
          >
            <ForwardRef(FormControl)
              variant="standard"
            >
              <ForwardRef(Select)
                onChange={[Function]}
                value="false"
              >
                <ForwardRef(MenuItem)
                  value="false"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    公開
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  value="true"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    下書き
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
              </ForwardRef(Select)>
            </ForwardRef(FormControl)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={40}
          >
            <IconAndText
              align="left"
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="1"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)>
            <Image
              height="80px"
              objectFit="cover"
              src="https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg"
              width="80px"
            />
          </ForwardRef(TableCell)>
        </ForwardRef(TableRow)>
        <ForwardRef(TableRow)
          key="preview-2"
        >
          <ForwardRef(TableCell)>
            <ForwardRef(Box)
              minHeight={80}
            >
              <ForwardRef(Stack)
                justifyContent="center"
                minHeight={55}
              >
                <ForwardRef(Typography)
                  component="h3"
                  sx={
                    Object {
                      "wordBreak": "break-all",
                    }
                  }
                  variant="body1"
                >
                  ノーチラス号の名前の由来
                </ForwardRef(Typography)>
              </ForwardRef(Stack)>
              <ForwardRef(Box)
                marginBottom={0}
              >
                <ForwardRef(Stack)
                  direction="row"
                  divider={
                    <ForwardRef(Divider)
                      flexItem={true}
                      orientation="vertical"
                    />
                  }
                  spacing={1}
                >
                  <NonStyleLink
                    to="/articles/2"
                  >
                    <ForwardRef(Button)
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      表示
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <NonStyleLink
                    to="/map/edit/2"
                  >
                    <ForwardRef(Button)
                      onClick={[MockFunction]}
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      編集
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <ForwardRef(Button)
                    disabled={false}
                    onClick={[Function]}
                    sx={
                      Object {
                        "minWidth": 0,
                        "p": 0,
                      }
                    }
                  >
                    削除
                  </ForwardRef(Button)>
                </ForwardRef(Stack)>
              </ForwardRef(Box)>
            </ForwardRef(Box)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={200}
          >
            <IconAndText
              align="left"
              fontSize={14}
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="バックグラウンドストーリー"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={70}
          >
            <ForwardRef(FormControl)
              variant="standard"
            >
              <ForwardRef(Select)
                onChange={[Function]}
                value="true"
              >
                <ForwardRef(MenuItem)
                  value="false"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    公開
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  value="true"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    下書き
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
              </ForwardRef(Select)>
            </ForwardRef(FormControl)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={40}
          >
            <IconAndText
              align="left"
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="1"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableBody)>
    </ForwardRef(Table)>
    <ForwardRef(Stack)
      spacing={1}
    >
      <ForwardRef(Typography)
        align="center"
        component="div"
        fontSize={14}
      >
        1
        〜
        1
        件 / 全
        2
        件
      </ForwardRef(Typography)>
    </ForwardRef(Stack)>
  </ForwardRef(Stack)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with articlesPreviews 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Stack)
      spacing={1}
    >
      <ForwardRef(Typography)
        align="center"
        component="div"
        fontSize={14}
      >
        1
        〜
        1
        件 / 全
        2
        件
      </ForwardRef(Typography)>
      <div
        className="pagination-wrapper"
      >
        <ForwardRef(Pagination)
          boundaryCount={1}
          count={2}
          onChange={[Function]}
          page={1}
          siblingCount={0}
        />
      </div>
    </ForwardRef(Stack)>
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody)>
        <ForwardRef(TableRow)
          key="preview-1"
        >
          <ForwardRef(TableCell)>
            <ForwardRef(Box)
              minHeight={80}
            >
              <ForwardRef(Stack)
                justifyContent="center"
                minHeight={55}
              >
                <ForwardRef(Typography)
                  component="h3"
                  sx={
                    Object {
                      "wordBreak": "break-all",
                    }
                  }
                  variant="body1"
                >
                  ノーチラス号のエンジン
                </ForwardRef(Typography)>
              </ForwardRef(Stack)>
              <ForwardRef(Box)
                marginBottom={0}
              >
                <ForwardRef(Stack)
                  direction="row"
                  divider={
                    <ForwardRef(Divider)
                      flexItem={true}
                      orientation="vertical"
                    />
                  }
                  spacing={1}
                >
                  <NonStyleLink
                    to="/articles/1"
                  >
                    <ForwardRef(Button)
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      表示
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <NonStyleLink
                    to="/map/edit/1"
                  >
                    <ForwardRef(Button)
                      onClick={[MockFunction]}
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      編集
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <ForwardRef(Button)
                    disabled={false}
                    onClick={[Function]}
                    sx={
                      Object {
                        "minWidth": 0,
                        "p": 0,
                      }
                    }
                  >
                    削除
                  </ForwardRef(Button)>
                </ForwardRef(Stack)>
              </ForwardRef(Box)>
            </ForwardRef(Box)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={200}
          >
            <IconAndText
              align="left"
              fontSize={14}
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="隠れミッキー"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={70}
          >
            <ForwardRef(FormControl)
              variant="standard"
            >
              <ForwardRef(Select)
                onChange={[Function]}
                value="false"
              >
                <ForwardRef(MenuItem)
                  value="false"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    公開
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  value="true"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    下書き
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
              </ForwardRef(Select)>
            </ForwardRef(FormControl)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={40}
          >
            <IconAndText
              align="left"
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="1"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)>
            <Image
              height="80px"
              objectFit="cover"
              src="https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg"
              width="80px"
            />
          </ForwardRef(TableCell)>
        </ForwardRef(TableRow)>
        <ForwardRef(TableRow)
          key="preview-2"
        >
          <ForwardRef(TableCell)>
            <ForwardRef(Box)
              minHeight={80}
            >
              <ForwardRef(Stack)
                justifyContent="center"
                minHeight={55}
              >
                <ForwardRef(Typography)
                  component="h3"
                  sx={
                    Object {
                      "wordBreak": "break-all",
                    }
                  }
                  variant="body1"
                >
                  ノーチラス号の名前の由来
                </ForwardRef(Typography)>
              </ForwardRef(Stack)>
              <ForwardRef(Box)
                marginBottom={0}
              >
                <ForwardRef(Stack)
                  direction="row"
                  divider={
                    <ForwardRef(Divider)
                      flexItem={true}
                      orientation="vertical"
                    />
                  }
                  spacing={1}
                >
                  <NonStyleLink
                    to="/articles/2"
                  >
                    <ForwardRef(Button)
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      表示
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <NonStyleLink
                    to="/map/edit/2"
                  >
                    <ForwardRef(Button)
                      onClick={[MockFunction]}
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      編集
                    </ForwardRef(Button)>
                  </NonStyleLink>
                  <ForwardRef(Button)
                    disabled={false}
                    onClick={[Function]}
                    sx={
                      Object {
                        "minWidth": 0,
                        "p": 0,
                      }
                    }
                  >
                    削除
                  </ForwardRef(Button)>
                </ForwardRef(Stack)>
              </ForwardRef(Box)>
            </ForwardRef(Box)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={200}
          >
            <IconAndText
              align="left"
              fontSize={14}
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="バックグラウンドストーリー"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={70}
          >
            <ForwardRef(FormControl)
              variant="standard"
            >
              <ForwardRef(Select)
                onChange={[Function]}
                value="true"
              >
                <ForwardRef(MenuItem)
                  value="false"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    公開
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
                <ForwardRef(MenuItem)
                  value="true"
                >
                  <ForwardRef(Typography)
                    fontSize={14}
                  >
                    下書き
                  </ForwardRef(Typography)>
                </ForwardRef(MenuItem)>
              </ForwardRef(Select)>
            </ForwardRef(FormControl)>
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell)
            width={40}
          >
            <IconAndText
              align="left"
              iconComponent={
                <Memo
                  fontSize="inherit"
                />
              }
              iconPosition="left"
              text="1"
            />
          </ForwardRef(TableCell)>
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableBody)>
    </ForwardRef(Table)>
    <ForwardRef(Stack)
      spacing={1}
    >
      <ForwardRef(Typography)
        align="center"
        component="div"
        fontSize={14}
      >
        1
        〜
        1
        件 / 全
        2
        件
      </ForwardRef(Typography)>
      <div
        className="pagination-wrapper"
      >
        <ForwardRef(Pagination)
          boundaryCount={1}
          count={2}
          onChange={[Function]}
          page={1}
          siblingCount={0}
        />
      </div>
    </ForwardRef(Stack)>
  </ForwardRef(Stack)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with articlesPreviews mobile view 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Stack)
      spacing={1}
    >
      <ForwardRef(Typography)
        align="center"
        component="div"
        fontSize={14}
      >
        1
        〜
        1
        件 / 全
        2
        件
      </ForwardRef(Typography)>
      <div
        className="pagination-wrapper"
      >
        <ForwardRef(Pagination)
          boundaryCount={1}
          count={2}
          onChange={[Function]}
          page={1}
          siblingCount={0}
        />
      </div>
    </ForwardRef(Stack)>
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody)>
        <ForwardRef(TableRow)
          key="preview-1"
        >
          <ForwardRef(TableCell)>
            <ForwardRef(Typography)
              color="gray"
              component="div"
              marginBottom={1}
            >
              <ForwardRef(Box)
                marginBottom={2}
              >
                <ForwardRef(FormControl)
                  variant="standard"
                >
                  <ForwardRef(Select)
                    onChange={[Function]}
                    value="false"
                  >
                    <ForwardRef(MenuItem)
                      value="false"
                    >
                      <ForwardRef(Typography)
                        variant="subtitle2"
                      >
                        公開
                      </ForwardRef(Typography)>
                    </ForwardRef(MenuItem)>
                    <ForwardRef(MenuItem)
                      value="true"
                    >
                      <ForwardRef(Typography)
                        variant="subtitle2"
                      >
                        下書き
                      </ForwardRef(Typography)>
                    </ForwardRef(MenuItem)>
                  </ForwardRef(Select)>
                </ForwardRef(FormControl)>
              </ForwardRef(Box)>
              <ForwardRef(Stack)
                direction="row"
                justifyContent="space-between"
                spacing={1}
              >
                <IconAndText
                  align="left"
                  iconComponent={
                    <Memo
                      fontSize="inherit"
                    />
                  }
                  iconPosition="left"
                  text="隠れミッキー"
                  variant="subtitle2"
                />
                <IconAndText
                  align="left"
                  iconComponent={
                    <Memo
                      fontSize="inherit"
                    />
                  }
                  iconPosition="left"
                  text="1"
                  variant="subtitle2"
                />
              </ForwardRef(Stack)>
            </ForwardRef(Typography)>
            <ForwardRef(Stack)
              direction="row"
              justifyContent="space-between"
              spacing={1}
            >
              <ForwardRef(Box)
                minHeight={80}
              >
                <ForwardRef(Stack)
                  justifyContent="center"
                  minHeight={55}
                >
                  <ForwardRef(Typography)
                    component="h3"
                    sx={
                      Object {
                        "wordBreak": "break-all",
                      }
                    }
                    variant="body1"
                  >
                    ノーチラス号のエンジン
                  </ForwardRef(Typography)>
                </ForwardRef(Stack)>
                <ForwardRef(Box)
                  marginBottom={0}
                >
                  <ForwardRef(Stack)
                    direction="row"
                    divider={
                      <ForwardRef(Divider)
                        flexItem={true}
                        orientation="vertical"
                      />
                    }
                    spacing={1}
                  >
                    <NonStyleLink
                      to="/articles/1"
                    >
                      <ForwardRef(Button)
                        sx={
                          Object {
                            "minWidth": 0,
                            "p": 0,
                          }
                        }
                      >
                        表示
                      </ForwardRef(Button)>
                    </NonStyleLink>
                    <NonStyleLink
                      to="/map/edit/1"
                    >
                      <ForwardRef(Button)
                        onClick={[MockFunction]}
                        sx={
                          Object {
                            "minWidth": 0,
                            "p": 0,
                          }
                        }
                      >
                        編集
                      </ForwardRef(Button)>
                    </NonStyleLink>
                    <ForwardRef(Button)
                      disabled={false}
                      onClick={[Function]}
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      削除
                    </ForwardRef(Button)>
                  </ForwardRef(Stack)>
                </ForwardRef(Box)>
              </ForwardRef(Box)>
              <ForwardRef(Box)>
                <Image
                  height="80px"
                  objectFit="cover"
                  src="https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg"
                  width="80px"
                />
              </ForwardRef(Box)>
            </ForwardRef(Stack)>
          </ForwardRef(TableCell)>
        </ForwardRef(TableRow)>
        <ForwardRef(TableRow)
          key="preview-2"
        >
          <ForwardRef(TableCell)>
            <ForwardRef(Typography)
              color="gray"
              component="div"
              marginBottom={1}
            >
              <ForwardRef(Box)
                marginBottom={2}
              >
                <ForwardRef(FormControl)
                  variant="standard"
                >
                  <ForwardRef(Select)
                    onChange={[Function]}
                    value="true"
                  >
                    <ForwardRef(MenuItem)
                      value="false"
                    >
                      <ForwardRef(Typography)
                        variant="subtitle2"
                      >
                        公開
                      </ForwardRef(Typography)>
                    </ForwardRef(MenuItem)>
                    <ForwardRef(MenuItem)
                      value="true"
                    >
                      <ForwardRef(Typography)
                        variant="subtitle2"
                      >
                        下書き
                      </ForwardRef(Typography)>
                    </ForwardRef(MenuItem)>
                  </ForwardRef(Select)>
                </ForwardRef(FormControl)>
              </ForwardRef(Box)>
              <ForwardRef(Stack)
                direction="row"
                justifyContent="space-between"
                spacing={1}
              >
                <IconAndText
                  align="left"
                  iconComponent={
                    <Memo
                      fontSize="inherit"
                    />
                  }
                  iconPosition="left"
                  text="バックグラウンドストーリー"
                  variant="subtitle2"
                />
                <IconAndText
                  align="left"
                  iconComponent={
                    <Memo
                      fontSize="inherit"
                    />
                  }
                  iconPosition="left"
                  text="1"
                  variant="subtitle2"
                />
              </ForwardRef(Stack)>
            </ForwardRef(Typography)>
            <ForwardRef(Stack)
              direction="row"
              justifyContent="space-between"
              spacing={1}
            >
              <ForwardRef(Box)
                minHeight={80}
              >
                <ForwardRef(Stack)
                  justifyContent="center"
                  minHeight={55}
                >
                  <ForwardRef(Typography)
                    component="h3"
                    sx={
                      Object {
                        "wordBreak": "break-all",
                      }
                    }
                    variant="body1"
                  >
                    ノーチラス号の名前の由来
                  </ForwardRef(Typography)>
                </ForwardRef(Stack)>
                <ForwardRef(Box)
                  marginBottom={0}
                >
                  <ForwardRef(Stack)
                    direction="row"
                    divider={
                      <ForwardRef(Divider)
                        flexItem={true}
                        orientation="vertical"
                      />
                    }
                    spacing={1}
                  >
                    <NonStyleLink
                      to="/articles/2"
                    >
                      <ForwardRef(Button)
                        sx={
                          Object {
                            "minWidth": 0,
                            "p": 0,
                          }
                        }
                      >
                        表示
                      </ForwardRef(Button)>
                    </NonStyleLink>
                    <NonStyleLink
                      to="/map/edit/2"
                    >
                      <ForwardRef(Button)
                        onClick={[MockFunction]}
                        sx={
                          Object {
                            "minWidth": 0,
                            "p": 0,
                          }
                        }
                      >
                        編集
                      </ForwardRef(Button)>
                    </NonStyleLink>
                    <ForwardRef(Button)
                      disabled={false}
                      onClick={[Function]}
                      sx={
                        Object {
                          "minWidth": 0,
                          "p": 0,
                        }
                      }
                    >
                      削除
                    </ForwardRef(Button)>
                  </ForwardRef(Stack)>
                </ForwardRef(Box)>
              </ForwardRef(Box)>
              <ForwardRef(Box) />
            </ForwardRef(Stack)>
          </ForwardRef(TableCell)>
        </ForwardRef(TableRow)>
      </ForwardRef(TableBody)>
    </ForwardRef(Table)>
    <ForwardRef(Stack)
      spacing={1}
    >
      <ForwardRef(Typography)
        align="center"
        component="div"
        fontSize={14}
      >
        1
        〜
        1
        件 / 全
        2
        件
      </ForwardRef(Typography)>
      <div
        className="pagination-wrapper"
      >
        <ForwardRef(Pagination)
          boundaryCount={1}
          count={2}
          onChange={[Function]}
          page={1}
          siblingCount={0}
        />
      </div>
    </ForwardRef(Stack)>
  </ForwardRef(Stack)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with delete dialog 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody) />
    </ForwardRef(Table)>
  </ForwardRef(Stack)>
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(DialogTitle)
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
    >
      投稿「
      title
      」を削除しますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
      >
        削除しない
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
      >
        削除する
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with message 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody) />
    </ForwardRef(Table)>
  </ForwardRef(Stack)>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      severity="success"
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    >
      message
    </ForwardRef(Alert)>
  </ForwardRef(Snackbar)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with switch draft dialog to switch to draft 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody) />
    </ForwardRef(Table)>
  </ForwardRef(Stack)>
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(DialogTitle)
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
    >
      投稿「title」を下書き（非公開）に切り替えますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
      >
        いいえ
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
      >
        はい
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with switch draft dialog to switch to public 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            フード情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            グッズ情報
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-7"
            value="7"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-8"
            value="8"
          >
            攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Stack)
    spacing={1}
  >
    <ForwardRef(Table)>
      <ForwardRef(TableHead)>
        <ForwardRef(TableRow)>
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
          <ForwardRef(TableCell) />
        </ForwardRef(TableRow)>
      </ForwardRef(TableHead)>
      <ForwardRef(TableBody) />
    </ForwardRef(Table)>
  </ForwardRef(Stack)>
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(DialogTitle)
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
    >
      投稿「title」を公開しますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
      >
        いいえ
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
      >
        はい
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;
